--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>Work experience</h2>
     <ul>
       <li>
-        <h3>Samay labs LLC</h3>
+        <h3>Samay labs LLC (UXUI designer)</h3>
         <p>Jan 2023 - Oct 2024</p>
         <ul>
           <li>Collaborated with product managers, developers and other UX designers in a fast-paced Agile environment.</li>
@@ -44,7 +44,7 @@
           <li>Developed graphics and layouts for product illustrations, company logos, and Web sites.</li>
         </ul>
       </li>
-        <h3>Dodsal engg pvt ltd</h3>
+        <h3>Dodsal engg pvt ltd (Sr. Electrical Engineer)</h3>
         <p>2016 - 2018</p>
         <ul>
           <li>Provided technical support to engineers during product development cycle, resolving any issues that arose along the way.
@@ -55,7 +55,7 @@
         </ul>
       </li>
       <li>
-        <h3>Manali petrochemicals plant -2</h3>
+        <h3>Manali petrochemicals plant -2 (Site engineer)</h3>
         <p>2012 to 2016</p>
         <ul>
           <li>Three years of experience as a Site Engineer at Manali Petrochemical Plant, overseeing erection, operation, and maintenance of electrical systems. Expertise in managing preventive, breakdown, and shutdown maintenance, including O&M of transformers, motors, lighting, earthing systems, and synchronization of HT/LT power distribution.</li>
