--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li>Created Sketches, wireframes and prototypes to effectively communicate design ideas to Lead designer.</li>
           <li>Performed usability tests on developed products prior to release in order to detect any issues.</li>
           <li>Maintained consistency across all products by utilizing style guides throughout the entire design process.</li>
-          <li>Blog pages & covers for lightGallery.js & ParityDeals.</li>
+          <li>Blog pages & covers for TimeMaster.ai ,lightGallery.js, ParityDeals & WebWhiz.</li>
         </ul>
       </li>
       <li>
